Making more progress